# openeyes

./: .flake8  .gitignore  .pre-commit-config.yaml  BLUETOOTH_README.md  RAM_OPTIMIZATION_GUIDE.md  README.md  SIMPLE_README.md  cascade_info.md  concept_demo.py  folders.py  low_ram_openeyes.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_bluetooth.py  simple_client.py  simple_openeyes.py  simple_server.py  super_simple_client.py  super_simple_server.py  test_new_logic.py  test_temporal.py  ultra_simple_client.py  ultra_simple_server.py
.github/: copilot-instructions.md
docs/: README.md  eye-detection.md
openeyes/: __init__.py  cli.py  core.py  utils.py
tests/: test_cli.py  test_core.py  test_utils.py
